Fix nav-bar z-index

--- a/src/components/nav-bar/NavBar.pcss
+++ b/src/components/nav-bar/NavBar.pcss
@@ -10,6 +10,7 @@
   position: fixed;
   pointer-events: none;
   width: 100%;
+  z-index: 10;
   top: 0;
 }
 
@@ -29,7 +30,7 @@
   background: var(--bg-color);
   border-bottom: 1px solid var(--border-color);
   padding: 0 1em;
-  z-index: 1;
+  z-index: 10;
 }
 
 .toggle {
